# unqdantic

./: README.md  pyproject.toml
.github/workflows/: tests.yml
tests/: database.py  models.py  test_insert_query.py  test_model_meta.py
unqdantic/: __init__.py  core.py  expression.py  meta.py  models.py  types.py  utils.py
